# vip

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  GEMINI.md  README.md  config.yaml  docker-compose.yml  fix_modules.py  main.cc  main.sql  refactor_services.py  refactor_stl.py  restore_stl_comprehensive.py  update_repositories.py  vcpkg.json
.agents/skills/vip-backend-developer/: SKILL.md
.gemini/skills/: vip-backend-developer.skill
.gemini/skills/vip-backend-developer/: SKILL.md
controllers/: api_v1_ActivityLogs.cc  api_v1_ActivityLogs.h  api_v1_Admin.cc  api_v1_Admin.h  api_v1_AdminSessions.cc  api_v1_AdminSessions.h  api_v1_Auth.cc  api_v1_Auth.h  api_v1_FloorPlans.cc  api_v1_FloorPlans.h  api_v1_Media.cc  api_v1_Media.h  api_v1_Product.cc  api_v1_Product.h  api_v1_ProductImages.cc  api_v1_ProductImages.h  api_v1_ProjectInfo.cc  api_v1_ProjectInfo.h  api_v1_RegistrationInterests.cc  api_v1_RegistrationInterests.h  api_v1_Registrations.cc  api_v1_Registrations.h  api_v1_SiteSettings.cc  api_v1_SiteSettings.h
domains/: activity_logs.cppm  activity_logs.h  admin.cpp  admin.cppm  admin.h  admin_sessions.cppm  admin_sessions.h  domain.cppm  domain.h  floor_plans.cppm  floor_plans.h  media.cppm  media.h  product.cppm  product.h  product_images.cppm  product_images.h  project_info.cppm  project_info.h  registration_interests.cppm  registration_interests.h  registrations.cc  registrations.cppm  registrations.h  site_settings.cppm  site_settings.h
dto/: activity_logs_dto.cppm  activity_logs_dto.h  admin_dto.cppm  admin_dto.h  admin_sessions_dto.cppm  admin_sessions_dto.h  dto.cppm  dto.h  floor_plans_dto.cppm  floor_plans_dto.h  media_dto.cppm  media_dto.h  product_dto.cppm  product_dto.h  product_images_dto.cppm  product_images_dto.h  project_info_dto.cppm  project_info_dto.h  registration_interests_dto.cppm  registration_interests_dto.h  registrations_dto.cppm  registrations_dto.h  site_settings_dto.cppm  site_settings_dto.h
exception/: custom_exception.cppm  custom_exception.h
filters/: AuthFilter.cc  AuthFilter.h
models/: ActivityLogs.cc  ActivityLogs.h  AdminSessions.cc  AdminSessions.h  Admins.cc  Admins.h  FloorPlans.cc  FloorPlans.h  Media.cc  Media.h  ProductImages.cc  ProductImages.h  Products.cc  Products.h  ProjectInfo.cc  ProjectInfo.h  RegistrationInterests.cc  RegistrationInterests.h  Registrations.cc  Registrations.h  SiteSettings.cc  SiteSettings.h  model.h  model.json
plugins/: ImgBBPlugin.cc  ImgBBPlugin.h
public/: test.html
public/docs/: index.html  openapi.yaml  swagger-ui.css
repositories/: activity_logs_repository.cc  activity_logs_repository.cppm  activity_logs_repository.h  admin_repository.cc  admin_repository.cpp  admin_repository.cppm  admin_repository.h  admin_sessions_repository.cc  admin_sessions_repository.cppm  admin_sessions_repository.h  floor_plans_repository.cc  floor_plans_repository.cppm  floor_plans_repository.h  media_repository.cc  media_repository.cppm  media_repository.h  product_images_repository.cc  product_images_repository.cppm  product_images_repository.h  product_repository.cc  product_repository.cppm  product_repository.h  project_info_repository.cc  project_info_repository.cppm  project_info_repository.h  registration_interests_repository.cc  registration_interests_repository.cppm  registration_interests_repository.h  registrations_repository.cc  registrations_repository.cppm  registrations_repository.h  repo.cppm  repo.h  site_settings_repository.cc  site_settings_repository.cppm  site_settings_repository.h
services/: activity_logs_service.cc  activity_logs_service.cppm  activity_logs_service.h  admin_service.cpp  admin_service.cppm  admin_service.h  admin_sessions_service.cc  admin_sessions_service.cppm  admin_sessions_service.h  floor_plans_service.cc  floor_plans_service.cppm  floor_plans_service.h  media_service.cc  media_service.cppm  media_service.h  product_images_service.cc  product_images_service.cppm  product_images_service.h  product_service.cc  product_service.cppm  product_service.h  project_info_service.cc  project_info_service.cppm  project_info_service.h  registration_interests_service.cc  registration_interests_service.cppm  registration_interests_service.h  registrations_service.cc  registrations_service.cppm  registrations_service.h  service.cppm  service.h  site_settings_service.cc  site_settings_service.cppm  site_settings_service.h
test/: CMakeLists.txt  test_auth.cc  test_main.cc
utils/: password_hasher.cpp  password_hasher.cppm  password_hasher.h  utils.cppm  utils.h
vcpkg-custom-triplets/: x64-linux-release.cmake
